# asset-optimization

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  code_improvements.md  plan_improvements.md  pyproject.toml  todo.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1-MILESTONE-AUDIT.md
notebooks/: 01_quickstart.ipynb  01_quickstart.py  02_optimization.ipynb  02_optimization.py  03_visualization.ipynb  03_visualization.py  04_proportional_hazards.ipynb  04_proportional_hazards.py  05_roads_domain.ipynb  05_roads_domain.py  06_failure_modeling_with_eul_and_condition.ipynb  06_failure_modeling_with_eul_and_condition.py  07_failure_modeling_with_pymc.ipynb  07_failure_modeling_with_pymc.py  TEMPLATE.ipynb  TEMPLATE.py  optimization.ipynb  optimization.py  proportional_hazards.ipynb  proportional_hazards.py  quickstart.ipynb  quickstart.py  visualization.ipynb
research/: 1_domains_and_use_cases.md  2_statistical_models_overview.md  3_implementation_approaches.md  4_python_r_packages.md  5_financial_modeling_lessons.md  6_api_design_proposals.md  7_proposal_a_gap_analysis.md  7_proposal_a_spec.md  summary.md
tests/: conftest.py  test_constraints.py  test_deterioration.py  test_domains.py  test_effects.py  test_end_to_end.py  test_exports.py  test_group_propagation.py  test_objective.py  test_optimization.py  test_planner.py  test_portfolio.py  test_proportional_hazards.py  test_protocols.py  test_public_api.py  test_quality.py  test_registry.py  test_repositories.py  test_roads_domain.py  test_scenarios.py  (+4 more)
(+138 files in other folders)
