[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-optimization"
version = "0.1.0"
description = "Asset portfolio optimization for infrastructure"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pandera>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
