[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-optimization"
version = "0.1.0"
description = "Asset portfolio optimization for infrastructure"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pandera>=0.18.0",
    "scipy>=1.10.0",
    "pyarrow>=14.0.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.0",
    "notebook>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "notebook>=7.5.3",
    "pytest>=9.0.2",
    "jupytext==1.16.4",
    "pre-commit>=3.7.0",
    "ruff>=0.9.0",
]

[tool.jupytext]
formats = "ipynb,py:percent"
